# rogue-like

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
assets/ability/: adventurer.0.json  adventurer.1.json  adventurer.2.json  adventurer.3.json  beholder.0.json  swordsman.1.json  swordsman.2.json
assets/animcolprofile/: adventurer.json  beholder.json  swordsman.json  trap_peaks.json
assets/animset/: adventurer.json  beholder.json  swordsman.json  trap_peaks.json
assets/aseprite/: adventurer.json  adventurer.meta.json  beholder.json  beholder.meta.json  swordsman.json  swordsman.meta.json
assets/atlas/: adventurer.json  background.json  beholder.json  swordsman.json  traps.json
assets/chararch/: adventurer.json  beholder.json  swordsman.json
assets/mat/: ice.json  metal.json  mud.json  stone.json
assets/soundbank/: character.walkHit.json
docs/: ASEPRITE.md
src/: main.cc  precompiled.h
src/engine/: CMakeLists.txt  common.h
src/engine/anim/: CMakeLists.txt  anim_library.cc  anim_library.h  anim_resource.h  anim_runtime.cc  anim_runtime.h  anim_serialize.cc  anim_serialize.h  anim_system.cc  anim_system.h  anim_type.h  anim_utils.cc  anim_utils.h
src/engine/camera/: CMakeLists.txt  camera.h  camera_system.cc  camera_system.h  camera_utils.h
src/engine/core/: CMakeLists.txt  color.h  compiler.h  core_message.h  debug.h  engine.cc  engine.h  frame.h  fsm.h  handle.h  hash.h  log.h  param_set.h  param_traversal.h  phase_bus.cc  phase_bus.h  random.h  serialize.h  spatial_ref.h  string.h  type.h  type_trait.h  value_utils.h  vector.h
src/engine/event/: CMakeLists.txt  event_system.cc  event_system.h  message.h
src/engine/input/: CMakeLists.txt  action.cc  action.h  action_system.cc  action_system.h  input.cc  input.h  input_message.h  input_system.cc  input_system.h
src/engine/math/: CMakeLists.txt  geometry.h  mat.h  math_common.h  trs.h  vec2.h
src/engine/physics/: CMakeLists.txt  anim_collider.cc  anim_collider.h  anim_collider_library.cc  anim_collider_library.h  anim_collider_sync.cc  anim_collider_sync.h  anim_collider_sync_system.cc  anim_collider_sync_system.h  collider.h  collider_resource.h  collider_serialize.cc  collider_serialize.h  grid.cc  grid.h  hitbox.h  hitbox_system.cc  hitbox_system.h  physics.h  physics_body.h  physics_body_serialize.cc  physics_body_serialize.h  physics_system.cc  physics_system.h  physics_utils.cc  physics_utils.h
src/engine/player/: CMakeLists.txt  player.h  player_system.cc  player_system.h
src/engine/render/: CMakeLists.txt  opengl_render_device.cc  opengl_render_device.h  render_common.h  render_device.h  render_gizmo.cc  render_gizmo.h  render_queue.cc  render_queue.h  render_submit.cc  render_submit.h  render_system.cc  render_system.h  render_utils.cc  render_utils.h
src/engine/resource/: CMakeLists.txt  resource_file.h  resource_file_serialize.cc  resource_file_serialize.h  resource_serialize.h  resource_slot.h  resource_table.cc  resource_table.h  resource_type.h  resource_type_registry.cc  resource_type_registry.h
src/engine/scene/: CMakeLists.txt  scene_message.h  scene_system.cc  scene_system.h
src/engine/sound/: CMakeLists.txt  sound.h  sound_library.cc  sound_library.h  sound_resource.h  sound_runtime.h  sound_serialize.cc  sound_serialize.h  sound_system.cc  sound_system.h
src/engine/sprite/: CMakeLists.txt  atlas_library.cc  atlas_library.h  sprite.h  sprite_serialize.cc  sprite_serialize.h  sprite_utils.cc  sprite_utils.h
src/engine/texture/: CMakeLists.txt  texture.h  texture_library.cc  texture_library.h  texture_resource.h  texture_serialize.cc  texture_serialize.h
src/engine/time/: CMakeLists.txt  time_system.cc  time_system.h
src/engine/transform/: CMakeLists.txt  transform.h  transform_system.cc  transform_system.h  transform_utils.cc  transform_utils.h
src/game/: CMakeLists.txt  action_scope.h  demo.cc  demo.h  game.cc  game.h
src/game/ability/: CMakeLists.txt  ability.h  ability_fsm.h  ability_library.cc  ability_library.h  ability_operation.h  ability_operation_bindings.cc  ability_operation_bindings.h  ability_program.h  ability_program_utils.cc  ability_program_utils.h  ability_resource.h  ability_runtime.h  ability_serialize.cc  ability_serialize.h
src/game/anim/: CMakeLists.txt  anim_name_id.h
src/game/camera/: CMakeLists.txt  player_camera_system.cc  player_camera_system.h
src/game/character/: CMakeLists.txt  character.h  character_action.cc  character_action.h  character_anim.h  character_archetype.h  character_archetype_library.cc  character_archetype_library.h  character_archetype_resource.h  character_archetype_serialize.cc  character_archetype_serialize.h  character_factory.cc  character_factory.h  character_fsm.cc  character_fsm.h  character_step_handler.cc  character_step_handler.h  character_system.cc  character_system.h  character_utils.h
src/game/character/class/: character_class_default_bindings.h  character_class_generator.cc  character_class_generator.h
src/game/combat/: CMakeLists.txt  combat_system.cc  combat_system.h
src/game/physics/: CMakeLists.txt  material_library.cc  material_library.h  material_resource.h  material_serialize.cc  material_serialize.h  surface.h  surface_system.cc  surface_system.h
src/game/render/: CMakeLists.txt  game_render_common.h
src/game/resource/: CMakeLists.txt  game_resource.h
src/game/world/: CMakeLists.txt  tile.h  tile_map.h  tile_set.h  tile_system.cc  tile_system.h
tools/: requirements.txt
tools/rlres/: asset_pipeline.py  logger.py
tools/rlres/converter/: asset_converter.py
tools/rlres/converter/aseprite/: aseprite_build.py  aseprite_collider_profile.py  aseprite_converter.py  aseprite_frame.py  aseprite_pivot.py  aseprite_texture.py  aseprite_type.py  aseprite_write.py
tools/rlres/data/engine/anim/: anim_id.py  anim_type.py
tools/rlres/data/engine/param_set/: param_set.py  param_set_serialize.py
tools/rlres/exporter/: asset_exporter.py
tools/rlres/utils/: hash.py  json_utils.py  safe_utils.py  serialize_utils.py  value_utils.py
(+38 files in other folders)
